get me & auth middleware
